--- a/my-app/src/App.module.css
+++ b/my-app/src/App.module.css
@@ -47,3 +47,7 @@
   button:disabled {
 	background-color: rgb(141, 184, 181);
   }
+
+  button:focus {
+border: 2px solid rgba(1, 62, 77, 0.874);
+  }
