--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -172,6 +172,7 @@
     text-overflow: ellipsis; /* Добавляем многоточие */
     max-width: 400px;
   }
+
   .todo-text-add{
     word-wrap: break-word;
     white-space: normal; 
@@ -276,4 +277,15 @@
     font-weight: bold;
     color:#ece6e6;
     text-decoration: underline;
+  }
+
+  .loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
+    font-size: 24px;
+    font-weight: bold;
+    color:#ece6e6;
+    
   }
